This Version Integrates the Main Page City Listings with the SignIn Page. Bug: Scrollbar on city listings.

--- a/css/signIn.css
+++ b/css/signIn.css
@@ -26,7 +26,9 @@ body {
     color: white;
     font-weight: 300;
 }
-
+body ::-webkit-scrollbar {
+    display: none;
+}
 body ::-webkit-input-placeholder {
     /* WebKit browsers */
     font-family: 'Source Sans Pro', sans-serif;
@@ -66,6 +68,7 @@ body :-ms-input-placeholder {
     width: 100%;
     height: 100%;
     overflow: hidden;
+    z-index:1;
 }
 
 .wrapper.form-success .container h1 {
@@ -350,4 +353,29 @@ form button:hover {
     }
     0%, 100% {
         -webkit-transform: translateX(0);
+    }
+ }
+
+    .mainPageWrapper {
+        display: none;
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+    }
+
+    div.cityImage {
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-size: cover;
+        background-attachment: fixed;
+        height: 95vh;
+        width: 100vw;
+    }
+
+    div.cityImage h1 {
+        text-align: center;
+        margin: 0;
+        padding-top: 2%;
+        color: white;
+        font-size: 50pt;
     }
